Alteração no repositório do gustavo e do joão

--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <h1>No code melhor que high code</h1>
+
+    <h1>^A mensagem escrita acima é totalmente mentirosa.^</h1>
+
+    <h2>E quem concorda só olha!</h2>
 </body>
 </html>
